practice push of edited html

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Horiseon Digital Marketing</title>
+    <title>New Edit Title for git upload practice</title>
 </head>
 
 <body>
